BANNER: New website at https://r-ega.net

Changes in version 2.0.4

o FIX: plotting for `infoCluster` when there are grey lines involved (or not)

o ADD: `community.compare` to perform permutation test to determine statistical significance of cluster similarity

o UPDATE: moved `reindex_memberships` to helpers

o UPDATE: `reindex_memberships` used in `community.homogenize`


Changes in version 2.0.3

o FIX: freed `edge.*` arguments in `compare.EGA.plots` to allow full customization

o UPDATE: optimizations for speed and memory in `ergoInfo` and `boot.ergoInfo`

o DEPENDENCY: swapped out {ggdendro} for {dendextend}


Changes in version 2.0.2

o FIX: ties for max gain in `TMFG`

o FIX: continuous variables with few categories that are treated as ordinal in `polychoric.matrix`

o FIX: character input for `structure` is now accepted

o ADD: website pointing to different data check errors added to error output (hopefully, makes errors more understandable)

o UPDATE: `corr = "cor_auto"` now performs `qgraph::cor_auto` in favor of legacy; previous behavior starting at 2.0.0 was to deprecate `"cor_auto"` in favor of `"auto"`; default remains `corr = "auto"`

o UPDATE: `compare.EGA.plots` outputs `$all` and `$individual` for the plots

o UPDATE: when `structure` is supplied for `invariance`, then configural check is skipped (structure is assumed to be invariant)

o UPDATE: added data generation for `model = "BGGM"` and `uni.method = "expand"` in `community.unidimensional`

o DEPENDENCY: {BGGM} has been removed until dependency chain on CRAN can be resolved


Changes in version 2.0.1

o updated the polychoric C code to avoid out-of-bounds access errors


Changes in version 2.0.0
